isso é só umteste de comparação

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Magic Navigator Menu</title>
 </head>
-
+<!--- aoo --->
 <body>
   <div class="navigation">
     <ul>
